// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The select input pattern Should match snapshot when mode is multiple 1`] = `
<div>
  <div
    class="css-109th3q-InputWrapper"
  >
    <div
      class="css-1qm0f6g-InputLabel"
    >
      <label
        for="test"
      >
        <div
          class="css-14i3diu-Text css-vurnku"
        >
          test
        </div>
      </label>
    </div>
    <div
      class="css-apg3wl-SelectInput"
    >
      <div>
        <div
          class="css-1qnoh1k-DropdownButton"
        >
          <button
            class="css-3iue9s-Button"
            icon="expand_more"
          >
            <div
              class="css-1xz4u2o-Text css-vurnku"
            >
              1 item
            </div>
            <span
              class="css-lh6qdg-ButtonIcon"
            >
              <i
                class="material-icons  css-y0j37o-Icon"
              >
                expand_more
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="css-1539o05-SelectInput"
  >
    <span
      class="css-x2q8nv-Tag"
    >
      <span
        class="css-15nj5vr-Tag"
      >
        <div
          class="css-1su31x7-Text css-vurnku"
        >
          Travis Willingham
        </div>
      </span>
      <button
        class="css-7iz1i8-Tag"
      >
        <i
          class="material-icons  css-y0j37o-Icon"
        >
          close
        </i>
      </button>
    </span>
  </div>
</div>
`;

exports[`The select input pattern Should match snapshot when mode is single 1`] = `
<div>
  <div
    class="css-109th3q-InputWrapper"
  >
    <div
      class="css-1qm0f6g-InputLabel"
    >
      <label
        for="test"
      >
        <div
          class="css-14i3diu-Text css-vurnku"
        >
          test
        </div>
      </label>
    </div>
    <div
      class="css-apg3wl-SelectInput"
    >
      <div>
        <div
          class="css-1qnoh1k-DropdownButton"
        >
          <button
            class="css-3iue9s-Button"
            icon="expand_more"
          >
            <div
              class="css-1xz4u2o-Text css-vurnku"
            >
              Travis Willingham
            </div>
            <span
              class="css-lh6qdg-ButtonIcon"
            >
              <i
                class="material-icons  css-y0j37o-Icon"
              >
                expand_more
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
